# etc

./: .gitignore
age/: Makefile  age.c
libgen_tools/scripts/: Makefile  install-libgen.sh  libgen-test.sh  libgen.io.sh  libget.sh  move-libgen.sh
patch/: patch-zathura_config.c
slots/: slots.lisp
watch/: .gitignore  Makefile.am  README.md  configure.ac  error.c  error.h  update.h  update_portable.c  util.c  util.h  watch.c
